# daedal-eng

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.agents/skills/daedal-eng/: SKILL.md
.agents/skills/daedal-eng/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: daedal-eng-instincts.yaml
.codex/: AGENTS.md
src/: main.rs
